--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Database Configuration
-DATABASE_URL=postgres://localhost/ip_monitor_development
+DATABASE_URL=postgres://localhost/ip_monitor
 
 # Server Configuration
 RACK_ENV=development
