--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,7 @@ PORT=9292
 
 # Optional: Database connection pool settings
 DB_MAX_CONNECTIONS=10
+
+# Logging Configuration
+LOG_LEVEL=info
+LOG_FORMAT=color
