Add support of ipv6

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,6 +52,8 @@ services:
       db:
         condition: service_healthy
     command: ["bundle", "exec", "rake", "ping_worker"]
+    cap_add:
+      - NET_RAW
     deploy:
       replicas: 1
 
