--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,5 +57,14 @@ services:
     deploy:
       replicas: 1
 
+networks:
+  default:
+    enable_ipv6: true
+    driver: bridge
+    ipam:
+      config:
+        - subnet: 172.28.0.0/16
+        - subnet: fd00::/64
+
 volumes:
   pgdata:
