--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,4 +14,4 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Run tests via Docker Compose
-        run: docker compose --profile test up --build --abort-on-container-exit --exit-code-from test
+        run: docker compose --profile test up --build --abort-on-container-exit --exit-code-from test test
